# terraform-automation

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  bootstrap-tools.sh  justfile  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py
app/agents/: __init__.py  apply_agent.py  architect_agent.py  base.py  coding_agent.py  cost_agent.py  drift_agent.py  naming_agent.py  orchestrator_agent.py  plan_agent.py  plan_reviewer_agent.py  qa_agent.py  schemas.py  security_agent.py  supervisor_agent.py
app/api/: routes_admin.py  routes_capabilities.py  routes_chat.py  routes_projects.py  (+1 more)
devops-agent/: README.md  package.json
devops-agent/agent/: README.md  pyproject.toml
devops-agent/agent/src/: main.py
devops-agent/agent/src/app/: config.py  constants.py  main.py
devops-agent/agent/src/app/agents/: __init__.py  coding_agent.py  cost_agent.py  documentation_agent.py  gitops_agent.py  orchestrator_agent.py  schemas.py  supervisor_agent.py
devops-agent/agent/src/app/agui/: workflow_agent.py
devops-agent/agent/src/app/api/: routes_admin.py  routes_capabilities.py  routes_chat.py  routes_projects.py
devops-agent/agent/src/app/models/: __init__.py  approval.py  artifacts.py  gitops.py  locks.py  project.py
devops-agent/agent/src/app/services/: artifact_store.py  chat_executor.py  model_router.py  repo_discovery.py
devops-agent/agent/src/app/tools/: capability_router_tool.py  drift_monitor_tool.py  mcp_clients.py  terraform_rules_tool.py
devops-agent/agent/src/terraform_agentic_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
devops-agent/agent/tests/: conftest.py  test_capabilities.py  test_chat_flags.py  test_projects_api.py
devops-agent/agent/tests/agents/: test_architect_agent.py  test_coding_agent.py  test_drift_agent.py  test_orchestrator_agent.py  test_security_agent.py
docs/: terraform-standards.md
infra/: Dockerfile  docker-compose.dev.yml
tests/: test_agent_specs.py  test_capabilities.py  test_chat_flags.py  test_config.py  test_project_onboarding_tool.py  test_projects_api.py  test_repo_discovery_tool.py  test_tool_health.py  test_tool_installer.py
(+40 files in other folders)
